primer cambio, agregue un comentario

--- a/Blog.html
+++ b/Blog.html
@@ -57,6 +57,7 @@
 
       </header>
          <!--fin header-->
+         <!--Todavia no decido como diagramas esta sección-->
          <h2 class="tituloBlog text-center">Interactua con otros usuarios y clientes de Style Designs</h2>
     <div class="containerFotos">
         <img src="images/blog.jpg" alt="renderFrontal" class="foto1">
