primer cambio, agregue otro comentario

--- a/Blog.html
+++ b/Blog.html
@@ -64,7 +64,7 @@
         <img src="images/8.jpg" alt="maqueta" class="foto2">
         <img src="images/9.jpg" alt="maqueta2" class="foto3">
     </div>
-
+<!--una de las ideas es eliminar esta sección-->
         <p class="blog"> 
              En este blog podras consultar tus dudas e interactuar con nosotros y con otros clientes
         </p>
