agregue un tercer comentario

--- a/Blog.html
+++ b/Blog.html
@@ -65,6 +65,7 @@
         <img src="images/9.jpg" alt="maqueta2" class="foto3">
     </div>
 <!--una de las ideas es eliminar esta sección-->
+<!--y la otra es agregar box o formularios para que los clientres escriban-->
         <p class="blog"> 
              En este blog podras consultar tus dudas e interactuar con nosotros y con otros clientes
         </p>
