modifique la extensiones de las imagenes

--- a/renderExteriores.html
+++ b/renderExteriores.html
@@ -58,46 +58,46 @@
 
          <section class="rendersExteriores">
           <div>
-            <img src="images/12.jpg" alt="render arquitectonico facultad">
+            <img src="images/12.webp" alt="render arquitectonico facultad">
           </div>
           <div>
-            <img src="images/1.jpg" alt="render complejo habitacional">
+            <img src="images/1.webp" alt="render complejo habitacional">
           </div>
           <div>
-           <img src="images/10.jpg" alt="render centro de terapia">
+           <img src="images/10.webp" alt="render centro de terapia">
           </div>
           <div>
-            <img src="images/11.jpg" alt="render patio interno block habitacional">
+            <img src="images/11.webp" alt="render patio interno block habitacional">
           </div>
           <div>
-            <img src="images/5.jpg" alt="ender exterior centro comercial">
+            <img src="images/5.webp" alt="ender exterior centro comercial">
           </div>
           <div>
-            <img src="images/2.jpg" alt="render complejo habitacional frente">
+            <img src="images/2.webp" alt="render complejo habitacional frente">
           </div>
           <div>
-            <img src="images/3.jpg" alt="render estacionamiento de anfiteatro auto rojo">
+            <img src="images/3.webp" alt="render estacionamiento de anfiteatro auto rojo">
           </div>
           <div>
-            <img src="images/4.jpg" alt="render salon de exposicion">
+            <img src="images/4.webp" alt="render salon de exposicion">
           </div>
           <div>
-             <img src="images/background.jpg" alt="render paisajista ocaso">
+             <img src="images/background.webp" alt="render paisajista ocaso">
           </div>
           <div>
-            <img src="images/6.jpg" alt="render patio interno complejo habitacional">
+            <img src="images/6.webp" alt="render patio interno complejo habitacional">
           </div>
           <div>
-            <img src="images/7.jpg" alt="render jardin seco">
+            <img src="images/7.webp" alt="render jardin seco">
           </div>
           <div>
-            <img src="images/8.jpg" alt="render maqueta edifico">
+            <img src="images/8.webp" alt="render maqueta edifico">
           </div>
           <div>
-             <img src="images/9.jpg" alt="render maqueta edifio axonometrica">
+             <img src="images/9.webp" alt="render maqueta edifio axonometrica">
           </div>
           <div>
-            <img src="images/blog.jpg" alt="render ingreso">
+            <img src="images/blog.webp" alt="render ingreso">
           </div>
           <div></div>
         </section>
