--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
             <div class="container-fluid">
               <a class="navbar-brand" href="index.html">
-                <img src="images/logo_2_c.png" alt="Logo Style Designs" width="100" height="50" >
+                <img src="images/logo_2_c.webp" alt="Logo Style Designs" width="100" height="50" >
               </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -91,37 +91,37 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="images/1.jpg" class="d-block w-100" alt="render complejo habitacional ocaso">
+            <img src="images/1.webp" class="d-block w-100" alt="render complejo habitacional ocaso">
           </div>
           <div class="carousel-item">
-            <img src="images/2.jpg" class="d-block w-100" alt="render complejo habitacional frente">
+            <img src="images/2.webp" class="d-block w-100" alt="render complejo habitacional frente">
           </div>
           <div class="carousel-item">
-            <img src="images/3.jpg" class="d-block w-100" alt="render estacionamiento de anfiteatro auto rojo">
+            <img src="images/3.webp" class="d-block w-100" alt="render estacionamiento de anfiteatro auto rojo">
           </div>
           <div class="carousel-item">
-            <img src="images/4.jpg" class="d-block w-100" alt="render salon de exposicion">
+            <img src="images/4.webp" class="d-block w-100" alt="render salon de exposicion">
           </div>
           <div class="carousel-item">
-            <img src="images/5.jpg" class="d-block w-100" alt="render centro comercial">
+            <img src="images/5.webp" class="d-block w-100" alt="render centro comercial">
           </div>
           <div class="carousel-item">
-            <img src="images/6.jpg" class="d-block w-100" alt="render complejo habitacional">
+            <img src="images/6.webp" class="d-block w-100" alt="render complejo habitacional">
           </div>
           <div class="carousel-item">
-            <img src="images/7.jpg" class="d-block w-100" alt="render jardin seco">
+            <img src="images/7.webp" class="d-block w-100" alt="render jardin seco">
           </div>
           <div class="carousel-item">
-            <img src="images/10.jpg" class="d-block w-100" alt="render centro de terapia y rehabilitacion">
+            <img src="images/10.webp" class="d-block w-100" alt="render centro de terapia y rehabilitacion">
           </div>
           <div class="carousel-item">
-            <img src="images/11.jpg" class="d-block w-100" alt="render patio interno complejo habitacional">
+            <img src="images/11.webp" class="d-block w-100" alt="render patio interno complejo habitacional">
           </div>
           <div class="carousel-item">
-            <img src="images/12.jpg" class="d-block w-100" alt="render block facultad universal">
+            <img src="images/12.webp" class="d-block w-100" alt="render block facultad universal">
           </div>
           <div class="carousel-item">
-            <img src="images/background.jpg" class="d-block w-100" alt="render paisajista ocaso">
+            <img src="images/background.webp" class="d-block w-100" alt="render paisajista ocaso">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
