--- a/rendersInteriores.html
+++ b/rendersInteriores.html
@@ -19,7 +19,7 @@
         <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
           <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
-              <img src="images/logo_2_c.png" alt="Logo Style Designs" width="100" height="50" >
+              <img src="images/logo_2_c.webp" alt="Logo Style Designs" width="100" height="50" >
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -56,17 +56,17 @@
       </header>
          <!--fin header-->
 <section>
-  <div><img src="images/a.jpg" alt="render pileta patio interno"></div>
-  <div><img src="images/b.jpg" alt="render pileta patio interno2"></div>
-  <div><img src="images/C.jpg" alt="render oficina soleado"></div>
-  <div><img src="images/D.jpg" alt="render oficina noche"></div>
-  <div><img src="images/e.jpg" alt="render pileta con capsula protectora"></div>
-  <div><img src="images/g.jpg" alt="render plano en 3D"></div>
-  <div><img src="images/h.jpg" alt="render axonometrico plano en 3D"></div>
-  <div><img src="images/i.jpg" alt="render cocina interior"></div>
-  <div><img src="images/j.jpg" alt="render cocina de restorant"></div>
-  <div><img src="images/k.jpg" alt="render cocina de restorant2"></div>
-  <div><img src="images/l.jpg" alt="render cocina restorant3"></div>
+  <div><img src="images/a.webp" alt="render pileta patio interno"></div>
+  <div><img src="images/b.webp" alt="render pileta patio interno2"></div>
+  <div><img src="images/C.webp" alt="render oficina soleado"></div>
+  <div><img src="images/D.webp" alt="render oficina noche"></div>
+  <div><img src="images/e.webp" alt="render pileta con capsula protectora"></div>
+  <div><img src="images/g.webp" alt="render plano en 3D"></div>
+  <div><img src="images/h.webp" alt="render axonometrico plano en 3D"></div>
+  <div><img src="images/i.webp" alt="render cocina interior"></div>
+  <div><img src="images/j.webp" alt="render cocina de restorant"></div>
+  <div><img src="images/k.webp" alt="render cocina de restorant2"></div>
+  <div><img src="images/l.webp" alt="render cocina restorant3"></div>
 </section>
 <!--Inicio footer-->
         <footer class="foot">
