modifique mas extensiones

--- a/renderExteriores.html
+++ b/renderExteriores.html
@@ -19,7 +19,7 @@
         <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
           <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
-              <img src="images/logo_2_c.png" alt="Logo Style Designs" width="100" height="50" >
+              <img src="images/logo_2_c.webp" alt="Logo Style Designs" width="100" height="50" >
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -105,9 +105,9 @@
 <!--Inicio footer-->
         <footer class="foot">
           <ul class="display2">
-              <div><a href="https:/facebook.com/style.designs.sd" target="_blank" class="FC"><img src="iconos/facebook.png" width="30" height="30" alt="iconoFacebook"></a></div>
-              <div><a href="https:/instagram.com/style.designs.sd/?hl=es" target="_blank" class="IG"><img src="iconos/instagram.png" width="30" height="30" alt="iconoInstagram"></a></div>
-              <div><a href="https:/youtube.com/channel/UCWE-8mbHt8JJh6ZfY5Z9BZA" target="_blank" class="YT"><img src="iconos/youtube.png" width="35" height="30" alt="iconoYoutube"></a></div>
+              <div><a href="https:/facebook.com/style.designs.sd" target="_blank" class="FC"><img src="iconos/facebook.webp" width="30" height="30" alt="iconoFacebook"></a></div>
+              <div><a href="https:/instagram.com/style.designs.sd/?hl=es" target="_blank" class="IG"><img src="iconos/instagram.webp" width="30" height="30" alt="iconoInstagram"></a></div>
+              <div><a href="https:/youtube.com/channel/UCWE-8mbHt8JJh6ZfY5Z9BZA" target="_blank" class="YT"><img src="iconos/youtube.webp" width="35" height="30" alt="iconoYoutube"></a></div>
           </ul>
       </footer>
 <!--Fin footer-->      
