--- a/Blog.html
+++ b/Blog.html
@@ -21,7 +21,7 @@
         <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
           <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
-              <img src="images/logo_2_c.png" alt="Logo Style Designs" width="100" height="50" >
+              <img src="images/logo_2_c.webp" alt="Logo Style Designs" width="100" height="50" >
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -60,9 +60,9 @@
          <!--Todavia no decido como diagramas esta sección-->
          <h2 class="tituloBlog text-center">Interactua con otros usuarios y clientes de Style Designs</h2>
     <div class="containerFotos">
-        <img src="images/blog.jpg" alt="renderFrontal" class="foto1">
-        <img src="images/8.jpg" alt="maqueta" class="foto2">
-        <img src="images/9.jpg" alt="maqueta2" class="foto3">
+        <img src="images/blog.webp" alt="renderFrontal" class="foto1">
+        <img src="images/8.webp" alt="maqueta" class="foto2">
+        <img src="images/9.webp" alt="maqueta2" class="foto3">
     </div>
 <!--una de las ideas es eliminar esta sección-->
 <!--y la otra es agregar box o formularios para que los clientres escriban-->
@@ -72,9 +72,9 @@
 <!--Inicio footer-->
         <footer class="foot fixed-bottom">
           <ul class="display2">
-              <div><a href="https:/facebook.com/style.designs.sd" target="_blank" class="FC"><img src="iconos/facebook.png" width="30" height="30" alt="iconoFacebook"></a></div>
-              <div><a href="https:/instagram.com/style.designs.sd/?hl=es" target="_blank" class="IG"><img src="iconos/instagram.png" width="30" height="30" alt="iconoInstagram"></a></div>
-              <div><a href="https:/youtube.com/channel/UCWE-8mbHt8JJh6ZfY5Z9BZA" target="_blank" class="YT"><img src="iconos/youtube.png" width="35" height="30" alt="iconoYoutube"></a></div>
+              <div><a href="https:/facebook.com/style.designs.sd" target="_blank" class="FC"><img src="iconos/facebook.webp" width="30" height="30" alt="iconoFacebook"></a></div>
+              <div><a href="https:/instagram.com/style.designs.sd/?hl=es" target="_blank" class="IG"><img src="iconos/instagram.webp" width="30" height="30" alt="iconoInstagram"></a></div>
+              <div><a href="https:/youtube.com/channel/UCWE-8mbHt8JJh6ZfY5Z9BZA" target="_blank" class="YT"><img src="iconos/youtube.webp" width="35" height="30" alt="iconoYoutube"></a></div>
           </ul>
       </footer>
 <!--Fin footer-->      
