--- a/Blog.html
+++ b/Blog.html
@@ -72,9 +72,9 @@
 <!--Inicio footer-->
         <footer class="foot fixed-bottom">
           <ul class="display2">
-              <div><a href="https:/facebook.com/style.designs.sd" target="_blank" class="FC"><img src="iconos/facebook.webp" width="30" height="30" alt="iconoFacebook"></a></div>
-              <div><a href="https:/instagram.com/style.designs.sd/?hl=es" target="_blank" class="IG"><img src="iconos/instagram.webp" width="30" height="30" alt="iconoInstagram"></a></div>
-              <div><a href="https:/youtube.com/channel/UCWE-8mbHt8JJh6ZfY5Z9BZA" target="_blank" class="YT"><img src="iconos/youtube.webp" width="35" height="30" alt="iconoYoutube"></a></div>
+              <div><a href="https://facebook.com/style.designs.sd" target="_blank" class="FC"><img src="iconos/facebook.webp" width="30" height="30" alt="iconoFacebook"></a></div>
+              <div><a href="https://instagram.com/style.designs.sd/?hl=es" target="_blank" class="IG"><img src="iconos/instagram.webp" width="30" height="30" alt="iconoInstagram"></a></div>
+              <div><a href="https://youtube.com/channel/UCWE-8mbHt8JJh6ZfY5Z9BZA" target="_blank" class="YT"><img src="iconos/youtube.webp" width="35" height="30" alt="iconoYoutube"></a></div>
           </ul>
       </footer>
 <!--Fin footer-->      
