--- a/renderExteriores.html
+++ b/renderExteriores.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!--Meta tags-->
+<meta name="description" content="Renders Arquitectura,proyectos de 2D a 3D, renders interiores/exteriores y paisajísmo, videos y animaciones arquitectónicas, digitalizamos cualquier idea en renders hiperrealistas.">
+<meta name="keywords" content="Renders Arquitectura, videos y animaciones 3D, renders interiores y exteriores, renders hiperrealistas, proyectos de 2D a 3D, produccion de renders full HD.">    
+<meta name="author" content="Javier Albornoz">
+<!--Open graph-->
+<meta property="og: title" content="Renderizado y animacion arquitectónica">
+<meta property="og:description" content="Renders Arquitectura,proyectos de 2D a 3D, renders interiores/exteriores y paisajísmo, videos y animaciones arquitectónicas, digitalizamos cualquier idea en renders hiperrealistas.">
+<meta property="site_name" content="Style Designs">
+<meta property="og:locale" content="es_ES">
+
+    <!--Favicon-->
+    <link rel="shortcut icon" href="iconos/logo_2_c.ico" type="image/x-icon">
 <!--Bootstrap-->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 
