cambie el h1,modifique el carrousel,agregue mediasQ para el carrousel,modifique la seccion contact

--- a/Contacto.html
+++ b/Contacto.html
@@ -97,7 +97,7 @@
         <label for="texto-mensaje" class="form-label container">Mensaje</label>
         <textarea name="asunto" id="texto-mensaje" cols="100" rows="10"></textarea>
       </div>  
-      <button type="submit" class="btn btn-primary">Submit</button>
+      <button type="submit" value="enviar" class="btn btn-primary">Submit</button>
     </form>
 </section>
 <!--inicio footer-->
