nuevo intento de conexion de formulario

--- a/Contacto.html
+++ b/Contacto.html
@@ -84,7 +84,7 @@
 
       
     </div>
-    <form method="POST" action="enviar2.php" class="formulario container">
+    <form method="POST" action="enviar.php" class="formulario container">
       <div class="mb-3">
         <label for="InputEmail1" class="form-label">Dirección de Email</label>
         <input type="email" class="form-control" name="email" id="InputEmail1"  placeholder="ejemplo@gmail.com">
