modifique la seccion blog,para sumarle preguntas y respuestas animadas

--- a/Blog.html
+++ b/Blog.html
@@ -22,7 +22,7 @@
    <!--CSS--> 
     <link rel="stylesheet" href="css/style.css">
    
-    <title>BLOG - preguntas y respuestas frecuentes, expreciencias y más</title>
+    <title>Blog - preguntas y respuestas frecuentes</title>
        
 </head>
 <body>
@@ -69,20 +69,107 @@
 
       </header>
          <!--fin header-->
-         <!--Todavia no decido como diagramas esta sección-->
-         <h2 class="tituloBlog text-center">Interactua con otros usuarios y clientes de Style Designs</h2>
+     
+         <h2 class="tituloBlog text-center pt-4">Preguntas Frecuentes</h2>
+
     <div class="containerFotos">
         <img src="images/blog.webp" alt="renderFrontal" class="foto1">
         <img src="images/8.webp" alt="maqueta" class="foto2">
         <img src="images/9.webp" alt="maqueta2" class="foto3">
     </div>
-<!--una de las ideas es eliminar esta sección-->
-<!--y la otra es agregar box o formularios para que los clientres escriban-->
-        <p class="blog"> 
-             En este blog podras consultar tus dudas e interactuar con nosotros y con otros clientes
+    <!--Inicio de seccion preguntas frecuentes-->
+<section class="preguntasF">
+  <div class="contPreguntas text-center">
+    <div class="pregunta">
+      <p>¿Qué debo enviarles para el renderizado?</p>
+      <div class="respuesta">
+        <hr>
+        <p>Nos envías el proyecto que necesitas renderizar completo
+           y terminado en algún formato 3D. El mismo debe estar terminado 
+           para que comencemos el trabajo. Además es necesario que nos 
+           envíes archivos adicionales como ser plantas, cortes o imágenes 
+           de referencia sobre tu trabajo.
+         </p>
+      </div>
+    </div>
+
+    <div class="pregunta">
+      <p>¿En que formato reciben los archivos?</p>
+      <div class="respuesta">
+        <hr>
+        <p>Los formatos con los que trabajamos son (skp, .3ds, .max, .obj). 
+           Si tenés tu trabajo en otro formato distinto a los mencionados 
+           anteriormente, Consúltanos por el mismo y te respondemos
+           a la brevedad.
         </p>
+      </div>
+    </div>
+
+    <div class="pregunta">
+      <p>¿Hacen también modelado 3D?</p>
+      <div class="respuesta">
+        <hr>
+        <p>Si, en caso que no tengas un modelo 3D de tu proyecto, necesitaríamos los 
+           archivos que nos permitan entender como es el mismo y de esta manera nosotros
+           podemos realizar el modelo 3D para luego renderizarlo.
+        </p>
+      </div>
+    </div>
+
+  
+  <div class="pregunta">
+    <p>¿En cuanto tiempo recibo los renders?</p>
+    <div class="respuesta">
+      <hr>
+      <p>Una vez recibidos todos los archivos. Si solo es renderizado, en
+         un periodo de 3 días hábiles, vas a tener tu trabajo listo.
+         En caso de ser necesario también la modelación en 3D, en un
+         período de 6 días hábiles(sujeto a cambios según tamaño del proyecto).
+      </p>
+    </div>
+  </div>
+
+  <div class="pregunta">
+    <p>¿Cuánto cuesta un render?</p>
+    <div class="respuesta">
+      <hr>
+      <p>La fluctuación del precio de los renders estará sujeto al cambio 
+         del mercado de los mismos. Pregúntanos a través de nuestro contacto
+         directo o nuestras redes, y te estaremos informando del precio actual 
+         de las producciones.Tu consulta no molesta. 
+      </p>
+    </div>
+  </div>
+
+  <div class="pregunta">
+    <p>¿si quiero agregarle detalles específicos a mis renders puedo hacerlo?</p>
+    <div class="respuesta">
+      <hr>
+      <p>Si, en el proceso de producción de renders, nosotros nos encargamos de
+         informar con fotos(de avances) la ambientación, colores, preferencias de
+         iluminación, tiempo, clima, etc, que el cliente quiera modificar a su proyecto,
+         hasta llegar al render final deseado. 
+      </p>
+    </div>
+  </div>
+
+  <div class="pregunta">
+    <p>¿Cuáles son los métodos de pago?</p>
+    <div class="respuesta">
+      <hr>
+      <p>Si sos de San Miguel de Tucumán, podemos hacer el cobro directo en tu domicilio.
+         Si sos de cualquier otra parte, o si te queda más cómodo, nosotros te facilitaremos
+         un cbu de una cuenta de ahorros, a la cual tendrás que hacer una transferencia
+         con el importe de tu proyecto.
+      </p>
+    </div>
+  </div>
+
+ </div>
+</section>
+<!--Fin seccion preguntas frecuentes-->
 <!--Inicio footer-->
-        <footer class="foot fixed-bottom">
+        <footer class="foot">
           <ul class="display2">
               <div><a href="https://facebook.com/style.designs.sd" target="_blank" rel="noopener" class="FC"><img src="iconos/facebook.webp" width="30" height="30" alt="iconoFacebook"></a></div>
               <div><a href="https://instagram.com/style.designs.sd/?hl=es" target="_blank" rel="noopener" class="IG"><img src="iconos/instagram.webp" width="30" height="30" alt="iconoInstagram"></a></div>
