--- a/Contacto.html
+++ b/Contacto.html
@@ -101,7 +101,7 @@
     </form>
 </section>
 <!--inicio footer-->
-<footer class="foot fixed-bottom">
+<footer class="foot">
   <ul class="display2">
       <div><a href="https://facebook.com/style.designs.sd" target="_blank" rel="noopener" class="FC"><img src="iconos/facebook.webp" width="30" height="30" alt="iconoFacebook"></a></div>
       <div><a href="https://instagram.com/style.designs.sd/?hl=es" target="_blank" rel="noopener" class="IG"><img src="iconos/instagram.webp" width="30" height="30" alt="iconoInstagram"></a></div>
