mejore la sintaxis de preguntas frecuentes y arregle el footer fixed de contacto

--- a/Blog.html
+++ b/Blog.html
@@ -85,8 +85,7 @@
       <div class="respuesta">
         <hr>
         <p>Nos envías el proyecto que necesitas renderizar completo
-           y terminado en algún formato 3D. El mismo debe estar terminado 
-           para que comencemos el trabajo. Además es necesario que nos 
+           y terminado en algún formato 3D. Además es necesario que nos 
            envíes archivos adicionales como ser plantas, cortes o imágenes 
            de referencia sobre tu trabajo.
          </p>
@@ -124,7 +123,7 @@
       <p>Una vez recibidos todos los archivos. Si solo es renderizado, en
          un periodo de 3 días hábiles, vas a tener tu trabajo listo.
          En caso de ser necesario también la modelación en 3D, en un
-         período de 6 días hábiles(sujeto a cambios según tamaño del proyecto).
+         período de 6 días hábiles (sujeto a cambios según tamaño del proyecto).
       </p>
     </div>
   </div>
@@ -142,11 +141,11 @@
   </div>
 
   <div class="pregunta">
-    <p>¿si quiero agregarle detalles específicos a mis renders puedo hacerlo?</p>
+    <p>¿Puedo agregar detalles específicos a mis renders?</p>
     <div class="respuesta">
       <hr>
       <p>Si, en el proceso de producción de renders, nosotros nos encargamos de
-         informar con fotos(de avances) la ambientación, colores, preferencias de
+         informar con fotos (de avances) la ambientación, colores, preferencias de
          iluminación, tiempo, clima, etc, que el cliente quiera modificar a su proyecto,
          hasta llegar al render final deseado. 
       </p>
