mas correciones de sintaxis

--- a/Blog.html
+++ b/Blog.html
@@ -122,7 +122,7 @@
       <hr>
       <p>Una vez recibidos todos los archivos. Si solo es renderizado, en
          un periodo de 3 días hábiles, vas a tener tu trabajo listo.
-         En caso de ser necesario también la modelación en 3D, en un
+         En caso de ser necesario también el modelado 3D, en un
          período de 6 días hábiles (sujeto a cambios según tamaño del proyecto).
       </p>
     </div>
