nuevamente modifique porq en github no se aplican cambios

--- a/Contacto.html
+++ b/Contacto.html
@@ -84,7 +84,7 @@
 
       
     </div>
-    <form method="POST" action="enviar.php" class="formulario container">
+    <form method="POST" action="enviar.php" class="formulario container p-4">
       <div class="mb-3">
         <label for="InputEmail1" class="form-label">Dirección de Email</label>
         <input type="email" class="form-control" name="email" id="InputEmail1"  placeholder="ejemplo@gmail.com">
@@ -95,7 +95,7 @@
       </div>
       <div class="mb-3">
         <label for="texto-mensaje" class="form-label container">Mensaje</label>
-        <textarea name="asunto" id="texto-mensaje" cols="50" rows="10"></textarea>
+        <textarea name="asunto" id="texto-mensaje" cols="50" rows="10" class="w-100"></textarea>
       </div>  
       <button type="submit" value="enviar" class="btn btn-primary">Submit</button>
     </form>
