hice responsive la seccion de preguntas frecuentes

--- a/Contacto.html
+++ b/Contacto.html
@@ -72,7 +72,7 @@
    </header>
          <!--fin header-->
 
-
+ <!--Inicio sección formulario-->
 <section class="contactanos">
   <div class="tituloContacto">
     <h5 class="contacto text-center">C o n t a c t o <br>  Directo</h5>
@@ -81,9 +81,8 @@
         <div>
           <h2 class="contanos">Ahora hablemos sobre tu proyecto</h2>
         </div>
-
-      
     </div>
+   
     <form method="POST" action="enviar.php" class="formulario container p-4">
       <div class="mb-3">
         <label for="InputEmail1" class="form-label">Dirección de Email</label>
@@ -100,6 +99,7 @@
       <button type="submit" value="enviar" class="btn btn-primary">Submit</button>
     </form>
 </section>
+<!--Fin sección Formulario-->
 <!--inicio footer-->
 <footer class="foot">
   <ul class="display2">
