personalice la seccion renders, sume algo de JS para la visualizacion de la misma

--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
 
         <p class="textoNosotros container text-center " > 
           Style Designs es un estudio de renderización especializado en la visualización arquitectónica, 
-          ya sea en imágenes y recorridos en video de proyectos de diversas escalas, 
-          tales como intervenciones urbanas, complejos multifamiliares, viviendas unifamiliares, arquitectura comercial, social, 
+          ya sea en imágenes y recorridos <br> en video, de proyectos de diversas escalas, 
+          tales como intervenciones urbanas, complejos multifamiliares,<br> viviendas unifamiliares, arquitectura comercial, social, 
           decoración de interiores y paisajismo.
         </p> 
        
