--- a/Blog.html
+++ b/Blog.html
@@ -41,7 +41,7 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                  <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="index.html#quienesSomos">Quienes Somos</a>
@@ -56,7 +56,7 @@
                   </ul>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="Blog.html">Blog</a>
+                  <a class="nav-link active" href="Blog.html">Blog</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="Contacto.html">Contacto</a>
