--- a/Contacto.html
+++ b/Contacto.html
@@ -44,7 +44,7 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                  <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="index.html#quienesSomos">Quienes Somos</a>
@@ -62,7 +62,7 @@
                   <a class="nav-link" href="Blog.html">Blog</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="Contacto.html">Contacto</a>
+                  <a class="nav-link active" href="Contacto.html">Contacto</a>
                 </li>
           
                 </ul>
