ultimando detalles de la seccion renders exteriores

--- a/renderExteriores.html
+++ b/renderExteriores.html
@@ -83,7 +83,7 @@
               <img src="" alt="" id="img_slideshow">
            </div>
          </div>
-         <h2 class="h2ext text-center">Renders Exteriores</h2>
+         <h2 class="h2ext text-center pt-3">Renders Exteriores</h2>
          
          <section class="galeria">
            <div class="columna">
