agregue las fotos definitivas para la entrega,cambie el nombre de la seccion blog,agregue JS a la otra galeria

--- a/Contacto.html
+++ b/Contacto.html
@@ -59,7 +59,7 @@
                   </ul>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="Blog.html">Blog</a>
+                  <a class="nav-link" href="Q&A.html">Q & A</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link active" href="Contacto.html">Contacto</a>
