--- a/Q&A.html
+++ b/Q&A.html
@@ -22,7 +22,7 @@
    <!--CSS--> 
     <link rel="stylesheet" href="css/style.css">
    
-    <title>Blog - preguntas y respuestas frecuentes</title>
+    <title>Q&A - Preguntas y Respuestas frecuentes</title>
        
 </head>
 <body>
@@ -56,7 +56,7 @@
                   </ul>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" href="Blog.html">Blog</a>
+                  <a class="nav-link active" href="Q&A.html">Q & A</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="Contacto.html">Contacto</a>
