--- a/renderExteriores.html
+++ b/renderExteriores.html
@@ -58,7 +58,7 @@
                   </ul>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="Blog.html">Blog</a>
+                  <a class="nav-link" href="Q&A.html">Q & A</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="Contacto.html">Contacto</a>
@@ -71,6 +71,7 @@
  
       </header>
          <!--fin header-->
+         <!--inicio galeria-->
          <div class="overlay">
            <div class="slideshow">
              <span class="btn_cerrar">&times;</span>
@@ -106,22 +107,21 @@
            </div>
            <div class="columna">
             <img src="images/9.webp" alt="render maqueta edifio axonometrica" data-img-mostrar="12">
-            <img src="images/blog.webp" alt="render ingreso" data-img-mostrar="13">
-            <img src="images/9.webp" alt="render maqueta edifio axonometrica" data-img-mostrar="14">
-            <img src="images/blog.webp" alt="render ingreso" data-img-mostrar="15">
+            <img src="images/13.webp" alt="render ingreso" data-img-mostrar="13">
+            <img src="images/14.webp" alt="render maqueta edifio axonometrica" data-img-mostrar="14">
+            <img src="images/15.webp" alt="render ingreso" data-img-mostrar="15">
            </div>
            <div class="columna">
-            <img src="images/9.webp" alt="render maqueta edifio axonometrica" data-img-mostrar="16">
-            <img src="images/blog.webp" alt="render ingreso" data-img-mostrar="17">
-            <img src="images/9.webp" alt="render maqueta edifio axonometrica" data-img-mostrar="18">
-            <img src="images/blog.webp" alt="render ingreso" data-img-mostrar="19">
+            <img src="images/16.webp" alt="render maqueta edifio axonometrica" data-img-mostrar="16">
+            <img src="images/17.webp" alt="render ingreso" data-img-mostrar="17">
+            <img src="images/18.webp" alt="render maqueta edifio axonometrica" data-img-mostrar="18">
+            <img src="images/19.webp" alt="render ingreso" data-img-mostrar="19">
            </div>
 
          </section>
 
+<!--fin galeria-->
          
-
-
 <!--Inicio footer-->
         <footer class="foot">
           <ul class="display2">
