--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="Blog.html">Blog</a>
+                    <a class="nav-link" href="Q&A.html">Q & A</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="Contacto.html">Contacto</a>
