--- a/rendersInteriores.html
+++ b/rendersInteriores.html
@@ -89,7 +89,7 @@
                     <div class="columna">
                      <img src="images/a.webp" alt="render pileta patio interno" data-img-mostrar="0">
                      <img src="images/b.webp" alt="render pileta patio interno2" data-img-mostrar="1">
-                     <img src="images/C.webp" alt="render pileta interna cubierta" data-img-mostrar="2">
+                     <img src="images/c.webp" alt="render pileta interna cubierta" data-img-mostrar="2">
                      <img src="images/D.webp" alt="render oficina noche" data-img-mostrar="3">
                     </div>
                     <div class="columna">
