--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </div>
         <div class="carousel-inner d-flex align-items-center">
           <div class="carousel-item active">
-            <img src="images/1.webp" class="d-block w-100" alt="render complejo habitacional ocaso">
+            <img src="images/16.webp" class="d-block w-100" alt="render complejo habitacional ocaso">
           </div>
           <div class="carousel-item">
             <img src="images/2.webp" class="d-block w-100" alt="render complejo habitacional frente">
@@ -106,7 +106,7 @@
             <img src="images/5.webp" class="d-block w-100" alt="render centro comercial">
           </div>
           <div class="carousel-item">
-            <img src="images/6.webp" class="d-block w-100" alt="render complejo habitacional">
+            <img src="images/r.webp" class="d-block w-100" alt="render complejo habitacional">
           </div>
           <div class="carousel-item">
             <img src="images/7.webp" class="d-block w-100" alt="render jardin seco">
@@ -115,10 +115,10 @@
             <img src="images/10.webp" class="d-block w-100" alt="render centro de terapia y rehabilitacion">
           </div>
           <div class="carousel-item">
-            <img src="images/11.webp" class="d-block w-100" alt="render patio interno complejo habitacional">
+            <img src="images/17.webp" class="d-block w-100" alt="render patio interno complejo habitacional">
           </div>
           <div class="carousel-item">
-            <img src="images/12.webp" class="d-block w-100" alt="render block facultad universal">
+            <img src="images/s.webp" class="d-block w-100" alt="render block facultad universal">
           </div>
           <div class="carousel-item">
             <img src="images/background.webp" class="d-block w-100" alt="render paisajista ocaso">
