tratando de mejorar la performance final

--- a/rendersInteriores.html
+++ b/rendersInteriores.html
@@ -23,7 +23,7 @@
    <!--CSS--> 
     <link rel="stylesheet" href="css/style.css">
    <!--JS-->
-   <script src="js/script.js" defer></script>
+   <script src="js/script.js" defer async></script>
    
     <title>Renders Interiores</title>
        
