--- a/renderExteriores.html
+++ b/renderExteriores.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="css/style.css">
 
    <!--JS-->
-   <script src="js/script.js" defer></script>
+   <script src="js/script.js" defer async></script>
    
     <title>Renders Exteriores</title>
        
