--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 <meta property="og:locale" content="es_ES">
 
 <!--Favicon-->
-<link rel="shortcut icon" href="iconos/logo_2_c.ico" type="image/x-icon">
+<link rel="shortcut icon" href="iconos/logo_2_c.ico" type="image/x-icon" media="all">
 <!--Bootstrap-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"  integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
      <!--CSS-->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet"  href="css/style.css" media="all">
 
    
     <title>Style Designs - Renders Arquitectura, Videos y Paisajismo 3D.</title>
