--- a/renderExteriores.html
+++ b/renderExteriores.html
@@ -15,13 +15,13 @@
 <meta property="og:locale" content="es_ES">
 
     <!--Favicon-->
-    <link rel="shortcut icon" href="iconos/logo_2_c.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="iconos/logo_2_c.ico" type="image/x-icon" media="all">
 <!--Bootstrap-->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <!--iconos-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@5.9.55/css/materialdesignicons.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@5.9.55/css/materialdesignicons.min.css" media="all">
    <!--CSS--> 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" media="all">
 
    <!--JS-->
    <script src="js/script.js" defer async></script>
